--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 		<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 	<![endif]-->
-
+	<link href="img/favicon.png" rel="icon">
 </head>
 
 <body id="page-top" class="index">
@@ -276,7 +276,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12">
-						All content by Leonard Hoon and licensed under <a href="//creativecommons.org/licenses/by-nc-sa/3.0/ie/">Creative Commons</a>; code under <a href="//github.com/coogie/oscailte/blob/master/README.md">MIT Licence</a>. Like this template? <a href="http://startbootstrap.com/template-overviews/freelancer/">Get Freelancer Here.</a>
+						All content by Leonard Hoon and licensed under <a href="//creativecommons.org/licenses/by-nc-sa/3.0/ie/">Creative Commons</a>; code under <a href="//github.com/coogie/oscailte/blob/master/README.md">MIT Licence</a>. Like this template? <a href="http://startbootstrap.com/template-overviews/freelancer/">Get Freelancer Here.</a> Icons used made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed under <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0.</a>
 					</div>
 				</div>
 			</div>
