--- a/index.html
+++ b/index.html
@@ -96,33 +96,43 @@
 			</div>
 			<div class="row">
 				<div class="col-sm-4 portfolio-item">
-					<a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+					<a href="#academiaPortfolio" class="portfolio-link" data-toggle="modal">
 						<div class="caption">
 							<div class="caption-content">
-								<i class="fa fa-mortar-board fa-2x">Academia</i>
+								<i class="fa fa-mortar-board fa-5x"></i>
 							</div>
 						</div>
-						<img src="img/bald26.png" class="img-responsive img-centered" alt="">
+						<figure>
+							<img src="img/bald26.png" class="img-responsive img-centered" alt="">
+	  						<figcaption class="text-center fa-3x">Academia</figcaption>
+  						</figure>
 					</a>
 				</div>
 				<div class="col-sm-4 portfolio-item">
-					<a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+					<a href="#researchPortfolio" class="portfolio-link" data-toggle="modal">
 						<div class="caption">
 							<div class="caption-content">
-								<i class="fa fa-university fa-2x">Research</i>
+								<i class="fa fa-university fa-5x"></i>
 							</div>
 						</div>
-						<img src="img/bald27.png" class="img-responsive img-centered" alt="">
+						<figure>
+							<img src="img/bald27.png" class="img-responsive img-centered" alt="">
+	  						<figcaption class="text-center fa-3x">Research</figcaption>
+	  					</figure>
+
 					</a>
 				</div>
 				<div class="col-sm-4 portfolio-item">
-					<a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+					<a href="#softwarePortfolio" class="portfolio-link" data-toggle="modal">
 						<div class="caption">
 							<div class="caption-content">
-								<i class="fa fa-gears fa-2x">Software</i>
+								<i class="fa fa-gears fa-5x"></i>
 							</div>
 						</div>
-						<img src="img/man188.png" class="img-responsive img-centered" alt="">
+						<figure>
+							<img src="img/man188.png" class="img-responsive img-centered" alt="">
+	  						<figcaption class="text-center fa-3x">Software</figcaption>
+	  					</figure>
 					</a>
 				</div>
 				<!--div class="col-sm-4 portfolio-item">
@@ -174,6 +184,7 @@
 				</div>
 				<div class="col-lg-8 col-lg-offset-2 text-center">
 					<a href="https://bitbucket.org/LHoon" class="btn-social btn-outline"><i class="fa fa-fw fa-bitbucket"></i></a>
+					<a href="https://github.com/lhoon" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
 					<a href="http://au.linkedin.com/in/leonardhoon/" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
 
 				</div>
@@ -212,7 +223,7 @@
 						<div class="row control-group">
 							<div class="form-group col-xs-12 floating-label-form-group controls">
 								<label>Phone Number</label>
-								<input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
+								<input type="tel" class="form-control" placeholder="Phone Number (Optional)" id="phone">
 								<p class="help-block text-danger"></p>
 							</div>
 						</div>
@@ -243,7 +254,7 @@
 				<div class="row">
 					<div class="footer-col col-md-4">
 						<h3>Location</h3>
-						<p>3481 Melrose Place<br>Beverly Hills, CA 90210</p>
+						<p>Melbourne, Victoria<br>Australia</p>
 					</div>
 					<div class="footer-col col-md-4">
 						<h3>Around the Web</h3>
@@ -276,7 +287,8 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12">
-						All content by Leonard Hoon and licensed under <a href="//creativecommons.org/licenses/by-nc-sa/3.0/ie/">Creative Commons</a>; code under <a href="//github.com/coogie/oscailte/blob/master/README.md">MIT Licence</a>. Like this template? <a href="http://startbootstrap.com/template-overviews/freelancer/">Get Freelancer Here.</a> Icons used made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed under <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0.</a>
+						All content by Leonard Hoon and licensed under <a href="//creativecommons.org/licenses/by-nc-sa/3.0/ie/">Creative Commons</a>; code under <a href="//github.com/coogie/oscailte/blob/master/README.md">MIT Licence</a>.<br><br>
+						Freelancer is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>. Icons used made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed under <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0.</a>
 					</div>
 				</div>
 			</div>
@@ -291,7 +303,7 @@
 	</div>
 
 	<!-- Portfolio Modals -->
-	<div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="portfolio-modal modal fade" id="academiaPortfolio" tabindex="-1" role="dialog" aria-hidden="true">
 		<div class="modal-content">
 			<div class="close-modal" data-dismiss="modal">
 				<div class="lr">
@@ -344,7 +356,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="portfolio-modal modal fade" id="researchPortfolio" tabindex="-1" role="dialog" aria-hidden="true">
 		<div class="modal-content">
 			<div class="close-modal" data-dismiss="modal">
 				<div class="lr">
@@ -397,7 +409,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="portfolio-modal modal fade" id="softwarePortfolio" tabindex="-1" role="dialog" aria-hidden="true">
 		<div class="modal-content">
 			<div class="close-modal" data-dismiss="modal">
 				<div class="lr">
@@ -412,7 +424,7 @@
 							<h2>Software and Tools</h2>
 							<hr class="star-primary">
 							<img src="img/man188.png" class="img-responsive img-centered" alt="">
-							<p>My current tooling is currently being used in my research. Upon submission of my thesis, I'll put up the git link to the code. Another project I'm very proud to be a part of is the Seacow Database, developed with Dany Gunawan and Rendy Pranata during our time in Swinburne as students.</p>
+							<p>My current tooling is currently being used in my research. Upon submission of my thesis, I'll put up the repo link to the code.<br><br>Another project I'm very proud to be a part of is the <a href ="https://code.google.com/p/seacowdb/">Seacow Database</a>, developed with Dany Gunawan and Rendy Pranata during 2009 when we were students in Swinburne.</p>
 							<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
 						</div>
 					</div>
@@ -420,118 +432,6 @@
 			</div>
 		</div>
 	</div>
-	<!--div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
-		<div class="modal-content">
-			<div class="close-modal" data-dismiss="modal">
-				<div class="lr">
-					<div class="rl">
-					</div>
-				</div>
-			</div>
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-8 col-lg-offset-2">
-						<div class="modal-body">
-							<h2>Software and Tools</h2>
-							<hr class="star-primary">
-							<img src="img/portfolio/game.png" class="img-responsive img-centered" alt="">
-							<p>My current tooling is currently being used in my research. Upon submission of my thesis, I'll put up the git link to the code. Another project I'm very proud to be a part of is the Seacow Database, developed with Dany Gunawan and Rendy Pranata during our time in Swinburne as students.</p>
-							<ul class="list-inline item-details">
-								<li>Client:
-									<strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-									</strong>
-								</li>
-								<li>Date:
-									<strong><a href="http://startbootstrap.com">April 2014</a>
-									</strong>
-								</li>
-								<li>Service:
-									<strong><a href="http://startbootstrap.com">Web Development</a>
-									</strong>
-								</li>
-							</ul>
-							<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
-		<div class="modal-content">
-			<div class="close-modal" data-dismiss="modal">
-				<div class="lr">
-					<div class="rl">
-					</div>
-				</div>
-			</div>
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-8 col-lg-offset-2">
-						<div class="modal-body">
-							<h2>Project Title</h2>
-							<hr class="star-primary">
-							<img src="img/portfolio/safe.png" class="img-responsive img-centered" alt="">
-							<p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
-							<ul class="list-inline item-details">
-								<li>Client:
-									<strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-									</strong>
-								</li>
-								<li>Date:
-									<strong><a href="http://startbootstrap.com">April 2014</a>
-									</strong>
-								</li>
-								<li>Service:
-									<strong><a href="http://startbootstrap.com">Web Development</a>
-									</strong>
-								</li>
-							</ul>
-							<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
-		<div class="modal-content">
-			<div class="close-modal" data-dismiss="modal">
-				<div class="lr">
-					<div class="rl">
-					</div>
-				</div>
-			</div>
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-8 col-lg-offset-2">
-						<div class="modal-body">
-							<h2>Project Title</h2>
-							<hr class="star-primary">
-							<img src="img/portfolio/submarine.png" class="img-responsive img-centered" alt="">
-							<p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
-							<ul class="list-inline item-details">
-								<li>Client:
-									<strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-									</strong>
-								</li>
-								<li>Date:
-									<strong><a href="http://startbootstrap.com">April 2014</a>
-									</strong>
-								</li>
-								<li>Service:
-									<strong><a href="http://startbootstrap.com">Web Development</a>
-									</strong>
-								</li>
-							</ul>
-							<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div-->
-
 	<!-- jQuery Version 1.11.0 -->
 	<script src="js/jquery-1.11.0.js"></script>
 
