--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 					<li class="page-scroll">
 						<a href="#about">About</a>
 					</li>
-					<li class="page-scroll">
+					<!--li class="page-scroll">
 						<a href="#contact">Contact</a>
-					</li>
+					</li-->
 				</ul>
 			</div>
 			<!-- /.navbar-collapse -->
@@ -193,7 +193,7 @@
 	</section>
 
 	<!-- Contact Section -->
-	<section id="contact">
+	<!--section id="contact">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
@@ -205,7 +205,7 @@
 				<div class="col-lg-8 col-lg-offset-2">
 					<!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
 					<!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-					<form name="sentMessage" id="contactForm" novalidate>
+					<!--form name="sentMessage" id="contactForm" novalidate>
 						<div class="row control-group">
 							<div class="form-group col-xs-12 floating-label-form-group controls">
 								<label>Name</label>
@@ -245,7 +245,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section-->
 
 	<!-- Footer -->
 	<footer class="text-center">
@@ -287,8 +287,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12">
-						All content by Leonard Hoon and licensed under <a href="//creativecommons.org/licenses/by-nc-sa/3.0/ie/">Creative Commons</a>; code under <a href="//github.com/coogie/oscailte/blob/master/README.md">MIT Licence</a>.<br><br>
-						Freelancer is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>. Icons used made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed under <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0.</a>
+						All content by Leonard Hoon and licensed under <a href="//creativecommons.org/licenses/by-nc-sa/3.0/ie/">Creative Commons</a>; code under <a href="//github.com/coogie/oscailte/blob/master/README.md">MIT Licence</a>. Freelancer is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>. Icons used made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed under <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0.</a>
 					</div>
 				</div>
 			</div>
