Changed social button behaviour to open links in a new tab.

--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
 					<p>Hi and thanks for dropping by! I'm a Researcher and Analyst Developer, currently based in Melbourne, Australia and am in the midst of my Ph.D. When I'm not coding, reading, teaching or writing, you'll find me in the shed on the bass or guitar.</p>
 				</div>
 				<div class="col-lg-8 col-lg-offset-2 text-center">
-					<a href="https://bitbucket.org/LHoon" class="btn-social btn-outline"><i class="fa fa-fw fa-bitbucket"></i></a>
-					<a href="https://github.com/lhoon" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
-					<a href="http://au.linkedin.com/in/leonardhoon/" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
+					<a href="https://bitbucket.org/LHoon" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-bitbucket"></i></a>
+					<a href="https://github.com/lhoon" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
+					<a href="http://au.linkedin.com/in/leonardhoon/" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
 
 				</div>
 			</div>
