Removed ?! and parenthesis from "Musician".

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 					<div class="intro-text">
 						<span class="name">Leonard Hoon</span>
 						<hr class="star-dark">
-						<span class="skills">Academic - Researcher - Analyst Developer - (Musician?!)</span>
+						<span class="skills">Academic - Researcher - Analyst Developer - Musician</span>
 					</div>
 				</div>
 			</div>
