Fixed Twitter social button to open twitter in a new tab.

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 					<a href="https://bitbucket.org/LHoon" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-bitbucket"></i></a>
 					<a href="https://github.com/lhoon" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
 					<a href="http://au.linkedin.com/in/leonardhoon/" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
-					<a href="https://twitter.com/leonardhoon" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
+					<a href="https://twitter.com/leonardhoon" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
 				</div>
 			</div>
 		</div>
