--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
 						<a href="#page-top"></a>
 					</li>
 					<li class="page-scroll">
-						<a href="#outlook">Academia</a>
-					</li>
-					<li class="page-scroll">
 						<a href="#phd">PhD</a>
 					</li>
 					<li class="page-scroll">
 						<a href="#publications">Papers</a>
+					</li>
+					<li class="page-scroll">
+						<a href="#resume">Resume</a>
 					</li>
 					<li class="page-scroll">
 						<a href="#contact">About</a>
@@ -84,40 +84,19 @@
 		</div>
 	</header>
 
-<!-- Teaching Section -->
-	<section id="outlook">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12 text-center">
-					<h2>My Academic Philosophy</h2>
-					<hr class="star-primary">
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-8 col-lg-offset-2 text-left">
-					<p class="quote"><strong>“The illiterate of the 21st century will not be those who cannot read and write, but those who cannot learn, unlearn, and relearn.” ― Alvin Toffler</strong></p>
-					<br>
-					<p>I've taught at Swinburne University of Technology since 2010 and have had the pleasure of being involved in the development of materials for and the delivery of:</p>
-					<br>
-					<p>Algorithmic Problem Solving, Configuring Business Information Systems, Final Year Project, Introduction to Programming, Software Development for Mobile Devices, Software Project Practices and Management, and Usability.</p>
-					<br>
-					<p>The teaching philosophy I have is inspired by Swinburne's industry facing outlook. We try to impart upon our graduates skills to prepare them for the workplace. My personal opinion on the matter is to focus more on getting students understanding the 'why' of things so that they can be empowered to engage in deeper learning beyond subject material.</p>
-				</div>
-			</div>
-		</div>
-	</section>
-
 	<!-- PhD Section -->
 	<section id="phd">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
-					<h2>My Ph.D. Journey</h2>
-					<hr class="hat-primary">
+					<h2>Ph.D. Odyssey</h2>
+					<hr class="star-primary">
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2 text-left">
+					<p class="quote"><strong>“It is good to have an end to journey toward, but it is the journey that matters in the end.”</strong></p><p class="quoter"> ― Ursula K. Le Guin</p>
+					<br>
 					<p>I am currently in the writing stage of my thesis. Once I have submitted I will update the Abstract below, meanwhile, this is from our tech report: <a href="http://hdl.handle.net/1959.3/352848" class="skill" target="_blank">“An Analysis of the Mobile App Review Landscape: Trends and Implications,”</a> written in July of 2012.</p>
 					<br>
 					<p style="text-align:center"><strong>Abstract</strong></p>
@@ -143,16 +122,16 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
-					<h2>My Publications</h2>
+					<h2>Publications</h2>
 					<hr class="star-primary">
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2 text-left">
-					<p>My background in Software Engineering background enables my research efforts, as I can develop and optimise my own tooling. I currently write and publish in Healthcare Information Systems, Human Computer Interaction and Mobile App Review Analysis.</p>
+					<p class="quote"><strong>“Science is a wonderful thing if one does not have to earn one's living at it.”</p><p class="quoter"> ― Albert Einstein</strong></p>
 					<br>
-					<p>The methods I employ and research areas I heavily reference range from Information Retrieval and Summarisation, Information Systems, Natural Language Processing, Opinion Mining to Software Evolution.</p>
-
+					<p>My Software Engineering background enables my research efforts, allowing me to develop and optimise my own tooling. I currently write and publish in Healthcare Information Systems, Human Computer Interaction and Mobile App Review Analysis.</p>
+					<br>
 					<p>Publication list (as of 5th Nov 2015):</p>
 					<ul class="item-details">
 						<li>
@@ -200,6 +179,61 @@
 		</div>
 	</section>
 
+	<!-- Teaching Section -->
+	<section id="resume">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 text-center">
+					<h2>Resume Excerpt</h2>
+					<hr class="star-primary">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-8 col-lg-offset-2 text-left">
+					<p class="quote"><strong>“The illiterate of the 21st century will not be those who cannot read and write, but those who cannot learn, unlearn, and relearn.”</p><p class="quoter"> ― Alvin Toffler</strong></p>
+					<br>
+					<a class="skill" href="./resume/lhoon-resume.pdf" download>My resume is available here.</a>
+					<p><br>Experience:</p>
+					<ul class="list-inline item-details">
+						<li>
+							Aug '13 – Current: <strong>Research Fellow</strong>, Swinburne Software Innovation Lab.
+						</li>
+						<li>
+							Feb '10 – Current: <strong>Sessional Academic</strong>, Swinburne University of Technology.
+						</li>
+						<li>
+							Nov '12 – Aug '14: <strong>Student Volunteer Chair</strong>, Academic Conferences (ASWEC, OZCHI, VLHCC).
+						</li>
+						<li>
+							Feb '11 – Mar '11: <strong>Contract Analyst Developer</strong>, Lookout Mobile.
+						</li>
+						<li>
+							Aug '10 – Nov '10: <strong>Intern Application Developer</strong>, Long Weekend LLC.
+						</li>
+						<li>
+							Jun '06 – Jun '08: <strong>Corporal First Class</strong>, Armour Infantry Trooper, Singapore Armed Forces.
+						</li>
+					</ul>
+					<p>Education:</p>
+					<ul class="list-inline item-details">
+						<li>
+							(Expected in 2016) <strong>Ph.D. (CompSc)</strong>, Swinburne University of Technology, Australia.
+						</li>
+						<li>
+							<strong>MIT</strong>, Swinburne University of Technology, Australia.
+						</li>
+						<li>
+							<strong>BSc (IT)</strong>, Swinburne University of Technology, Australia.
+						</li>
+						<li>
+							<strong>Dip IT (E-Comm Tech)</strong>, Temasek Polytechnic, Singapore.
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</section>
+
 	<!-- About Section -->
 	<section class="success" id="contact">
 		<div class="container">
@@ -211,6 +245,8 @@
 			</div>
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2 text-center">
+					<p class="quote"><strong>“Get your facts first, then you can distort them as you please.”</p><p class="quoter"> ― Mark Twain</strong></p>
+					<br>
 					<p>Thank you for dropping by. I am a Research Fellow at the <a href="http://www.ssil.com.au" class="skill" target="_blank">Swinburne Software Innovation Lab</a> and a Sessional Academic with <a href="http://www.ssil.com.au" class="skill" target="_blank">Swinburne University of Technology</a>. Outside of that, I am either writing my Ph.D. thesis or playing instruments to the alongside my music teacher <a href="https://www.facebook.com/Sita-School-of-Singing-Music-and-Arts-172512701326" class="skill" target="_blank">Frank Sita</a> at local cafes.</p>
 				</div>
 				<div class="col-lg-8 col-lg-offset-2 text-center">
