Removed comma from the tech report name in the phd section.

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 				<div class="col-lg-8 col-lg-offset-2 text-left">
 					<p class="quote"><strong>“It is good to have an end to journey toward, but it is the journey that matters in the end.”</strong></p><p class="quoter"> ― Ursula K. Le Guin</p>
 					<br>
-					<p>I am currently in the writing stage of my thesis. Once I have submitted I will update the Abstract below, meanwhile, this is from our tech report: <a href="http://hdl.handle.net/1959.3/352848" class="skill" target="_blank">“An Analysis of the Mobile App Review Landscape: Trends and Implications,”</a> written in July of 2012.</p>
+					<p>I am currently in the writing stage of my thesis. Once I have submitted I will update the Abstract below, meanwhile, this is from our tech report: <a href="http://hdl.handle.net/1959.3/352848" class="skill" target="_blank">“An Analysis of the Mobile App Review Landscape: Trends and Implications”</a> written in July of 2012.</p>
 					<br>
 					<p style="text-align:center"><strong>Abstract</strong></p>
 					<p>Apple Inc.'s App Store offers a distribution mechanism for apps and a public review system which allows users to express opinions regarding purchased apps. The ratings and reviews left by users have the potential to influence new users and, hence, have an impact on the commercial feasibility of an app. Current literature has extensively investigated reviews of books, movies and hotels. However, there is a limited understanding of reviews for mobile apps.</p>
