Content revision to make it less text heavy based on feedback.

--- a/index.html
+++ b/index.html
@@ -94,24 +94,26 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-lg-8 col-lg-offset-2 text-left">
-					<p class="quote"><strong>“It is good to have an end to journey toward, but it is the journey that matters in the end.”</strong></p><p class="quoter"> ― Ursula K. Le Guin</p>
+				<div class="col-lg-8 col-lg-offset-2 text-justify">
+					<p class="quote"><strong>“It is good to have an end to journey toward, but it is the journey that matters in the end.”</p><p class="quoter"> ― Ursula K. Le Guin</strong></p>
 					<br>
-					<p>I am currently in the writing stage of my thesis. Once I have submitted I will update the Abstract below, meanwhile, this is from our tech report: <a href="http://hdl.handle.net/1959.3/352848" class="skill" target="_blank">“An Analysis of the Mobile App Review Landscape: Trends and Implications”</a> written in July of 2012.</p>
+					<p>From the Abstract of <a href="http://hdl.handle.net/1959.3/352848" class="skill" target="_blank">“An Analysis of the Mobile App Review Landscape: Trends and Implications”</a>
+					</p>
 					<br>
-					<p style="text-align:center"><strong>Abstract</strong></p>
-					<p>Apple Inc.'s App Store offers a distribution mechanism for apps and a public review system which allows users to express opinions regarding purchased apps. The ratings and reviews left by users have the potential to influence new users and, hence, have an impact on the commercial feasibility of an app. Current literature has extensively investigated reviews of books, movies and hotels. However, there is a limited understanding of reviews for mobile apps.</p>
+					Apple Inc.'s App Store offers a distribution mechanism for apps and a public review system which allows users to express opinions regarding purchased apps. The ratings and reviews left by users have the potential to influence new users and, hence, have an impact on the commercial feasibility of an app. Current literature has extensively investigated reviews of books, movies and hotels. However, there is a limited understanding of reviews for mobile apps.
 					<br>
-					<p>In this work, we analyse a large sample of reviews for top rated apps in order to determine the nature of the reviews, and how these reviews evolve over time. We performed a statistical analysis of over 8.7 million app reviews to identify the general distribution of review size, the rate of growth for reviews, and analyse the change of both rating and review size over time using the Gini coefficient. We found that:</p>
+					<br>
+					In this work, we analyse a large sample of reviews for top rated apps in order to determine the nature of the reviews, and how these reviews evolve over time. We performed a statistical analysis of over 8.7 million app reviews to identify the general distribution of review size, the rate of growth for reviews, and analyse the change of both rating and review size over time using the Gini coefficient. We found that:
+					<br>
 					<br>
 					<ul class="list-inline">
-						<li><p>(i) most reviews are short and the majority of apps receive well under 50 reviews in their first year,</p></li>
-						<li><p>(ii) apps receive a higher number of short reviews in comparison to long reviews as they age,</p></li>
-						<li><p>(iii) around half of the apps decrease in user perceived quality over time, as reflected by the star ratings, and</p></li>
-						<li><p>(iv) the rate of review growth and profile of reviews changes significantly between various apps as well as categories.</p></li>
+						<li>(i) most reviews are short and the majority of apps receive well under 50 reviews in their first year,</li>
+						<li>(ii) apps receive a higher number of short reviews in comparison to long reviews as they age,</li>
+						<li>(iii) around half of the apps decrease in user perceived quality over time, as reflected by the star ratings, and</li>
+						<li>(iv) the rate of review growth and profile of reviews changes significantly between various apps as well as categories.</li>
 					</ul>
 					<br>
-					<p>Developers can use the data presented in this work to benchmark their app. Our approach offers insights for both newer and older apps as we analyse reviews over time. We recommend that developers regularly monitor early reviews and continuously refine their app in order to ensure they meet changing user expectations.</p>
+					Developers can use the data presented in this work to benchmark their app. Our approach offers insights for both newer and older apps as we analyse reviews over time. We recommend that developers regularly monitor early reviews and continuously refine their app in order to ensure they meet changing user expectations.
 				</div>
 			</div>
 		</div>
@@ -130,48 +132,46 @@
 				<div class="col-lg-8 col-lg-offset-2 text-left">
 					<p class="quote"><strong>“Science is a wonderful thing if one does not have to earn one's living at it.”</p><p class="quoter"> ― Albert Einstein</strong></p>
 					<br>
-					<p>My Software Engineering background enables my research efforts, allowing me to develop and optimise my own tooling. I currently write and publish in Healthcare Information Systems, Human Computer Interaction and Mobile App Review Analysis.</p>
-					<br>
-					<p>Publication list (as of 5th Nov 2015):</p>
+					<p>I currently write and publish in Healthcare Information Systems, Human Computer Interaction and Mobile App Review Analysis.</p>
 					<ul class="item-details">
 						<li>
-							Leonard Hoon, Felix Ter Chian Tan, Rajesh Vasa, Kon Mouzakis, Mark Fitzgerald. “ICT-Enabled Time-Critical Clinical Practices: Examining the Affordances of an Information Processing Solution,” in Australasian Journal of Information Systems,	Selected Papers from the Australasian Conference on Information Systems (ACIS), 2015 (Accepted).
+							Hoon, L., Tan, F.T.C., Vasa, R., Mouzakis, K., Fitzgerald, M. “ICT-Enabled Time-Critical Clinical Practices: Examining the Affordances of an Information Processing Solution,” 2015 (Accepted).
 						</li>
 						<br>
 						<li>
-							<a href="http://link.springer.com/chapter/10.1007/978-3-319-26285-7_19" class="skill" target="_blank">Leonard Hoon, Miguel Angel Rodriguez-García, Rajesh Vasa, Rafael Valencia-García, & Jean-Guy Schneider. (2016). “App Reviews: Breaking the User and Developer Language Barrier,” in Trends and Applications in Software Engineering, Vol 405 of the series Advances in Intelligent Systems and Computing, pp. 223-233. Oct. 2015.</a>
+							<a href="http://link.springer.com/chapter/10.1007/978-3-319-26285-7_19" class="skill" target="_blank">Hoon, L., Rodriguez-García, M.A., Vasa, R., Valencia-García, R., & Schneider, J.-G. “App Reviews: Breaking the User and Developer Language Barrier,” 2015.</a>
 						</li>
 						<br>
 						<li>
-							<a href="https://aut.researchgateway.ac.nz/handle/10292/8160" class="skill" target="_blank">Leonard Hoon, Kon Mouzakis, Rajesh Vasa, Felix Ter Chian Tan, and Mark Fitzgerald. “Examining the Role of IS Affordances in Enabling Time Critical Clinical Practices: An Information Processing Perspective,” in Proc. 25th Australasian Conference on Information Systems, Dec. 2014.</a>
+							<a href="https://aut.researchgateway.ac.nz/handle/10292/8160" class="skill" target="_blank">Hoon, L., Mouzakis, K., Vasa, R., Tan, F.T.C., and Fitzgerald, M. “Examining the Role of IS Affordances in Enabling Time Critical Clinical Practices: An Information Processing Perspective,” 2014.</a>
 						</li>
 						<br>
 						<li>
-							<a href="http://dl.acm.org/citation.cfm?id=2541067" class="skill" target="_blank">Leonard Hoon, Rajesh Vasa, G. Y. Martino, Jean-Guy Schneider, Kon Mouzakis, “Awesome! Conveying Satisfaction on the App Store,” in Proc. 25th Australian CHI Conference, pp. 229–232, Nov. 2013.</a>
+							<a href="http://dl.acm.org/citation.cfm?id=2541067" class="skill" target="_blank">Hoon, L., Vasa, R., Martino G.Y., Schneider, J.-G., Mouzakis, K. “Awesome! Conveying Satisfaction on the App Store,” 2013.</a>
 						</li>
 						<br>
 						<li>
-							<a href="http://hdl.handle.net/1959.3/364882" class="skill" target="_blank">Kon Mouzakis, Leonard Hoon, and Rajesh Vasa, “Socrates Mobile App Review Dataset,” Swinburne Research Bank, Nov. 2013.</a>
+							<a href="http://hdl.handle.net/1959.3/364882" class="skill" target="_blank">Mouzakis, K., Hoon, L., and Vasa, R. “Socrates Mobile App Review Dataset,” 2013.</a>
 						</li>
 						<br>
 						<li>
-							<a href="http://hdl.handle.net/1959.3/352848" class="skill" target="_blank">Leonard Hoon, Rajesh Vasa, Jean-Guy Schneider, and John Grundy, “An Analysis of the Mobile App Review Landscape: Trends and Implications,” in Swinburne Research Bank, Jul. 2012.</a>
+							<a href="http://hdl.handle.net/1959.3/352848" class="skill" target="_blank">Hoon, L., Vasa, R., Schneider, J.-G., and Grundy, J. “An Analysis of the Mobile App Review Landscape: Trends and Implications,” 2012.</a>
 						</li>
 						<br>
 						<li>
-							<a href="http://dl.acm.org/citation.cfm?id=2414578" class="skill" target="_blank">Leonard Hoon, Rajesh Vasa, Jean-Guy Schneider, and Kon Mouzakis, “A Preliminary Analysis of Vocabulary in Mobile App User Reviews,” in Proc. 24th Australian CHI Conference, pp. 245–248, Nov. 2012.</a>
+							<a href="http://dl.acm.org/citation.cfm?id=2414578" class="skill" target="_blank">Hoon, L., Vasa, R., Schneider, J.-G., and Mouzakis, K. “A Preliminary Analysis of Vocabulary in Mobile App User Reviews,” 2012.</a>
 						</li>
 						<br>
 						<li>
-							<a href="http://dl.acm.org/citation.cfm?id=2414577" class="skill" target="_blank">Rajesh Vasa, Leonard Hoon, Kon Mouzakis, and Akihiro Noguchi, “A Preliminary Analysis of Mobile App User Reviews,” in Proc. 24th Australian CHI Conference, pp. 241–244, Nov. 2012.</a>
+							<a href="http://dl.acm.org/citation.cfm?id=2414577" class="skill" target="_blank">Vasa, R., Hoon, L., Mouzakis, K., and Noguchi A. “A Preliminary Analysis of Mobile App User Reviews,” 2012.</a>
 						</li>
 						<br>
 						<li>
-							<a href="http://dl.acm.org/citation.cfm?id=2414606" class="skill" target="_blank">Shannon Pace, Leonard Hoon, and Clinton J. Woodward, "Simulated Influence of User Interaction with Mobile Devices Amongst Pedestrians,” in Proc. 24th Australian CHI Conference, pp. 449–458, Nov. 2012.</a>
+							<a href="http://dl.acm.org/citation.cfm?id=2414606" class="skill" target="_blank">Pace, S., Hoon, L., and Woodward, C.J. "Simulated Influence of User Interaction with Mobile Devices Amongst Pedestrians,” 2012.</a>
 						</li>
 						<br>
 						<li>
-							<a href="http://dl.acm.org/citation.cfm?id=1862377" class="skill" target="_blank">Jean-Guy Schneider, Rajesh Vasa, Leonard Hoon, "Do Metrics Help to Identify Refactoring?,” in Proc. Joint ERCIM Workshop on EVOL/IWPSE, pp. 3–7, Sep. 2010.</a>
+							<a href="http://dl.acm.org/citation.cfm?id=1862377" class="skill" target="_blank">Schneider, J.-G., Vasa, R., Hoon, L. "Do Metrics Help to Identify Refactoring?,” 2010.</a>
 						</li>
 					</ul>
 				</div>
@@ -192,8 +192,8 @@
 				<div class="col-lg-8 col-lg-offset-2 text-left">
 					<p class="quote"><strong>“The illiterate of the 21st century will not be those who cannot read and write, but those who cannot learn, unlearn, and relearn.”</p><p class="quoter"> ― Alvin Toffler</strong></p>
 					<br>
-					<a class="skill" href="./resume/lhoon-resume.pdf" download>My resume is available here.</a>
-					<p><br>Experience:</p>
+					<p style="text-align:center;"><a class="skill" href="./resume/lhoon-resume.pdf" download>Full resume</a></p>
+					<p>Experience:</p>
 					<ul class="list-inline item-details">
 						<li>
 							Aug '13 – Current: <strong>Research Fellow</strong>, Swinburne Software Innovation Lab.
