Swapped out the PhD quote from Ursula Le Guin to Leo da Vinci to make it shorter.

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 			</div>
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2 text-justify">
-					<p class="quote"><strong>“It is good to have an end to journey toward, but it is the journey that matters in the end.”</p><p class="quoter"> ― Ursula K. Le Guin</strong></p>
+					<p class="quote"><strong>“Learning never exhausts the mind.”</p><p class="quoter"> ― Leonardo da Vinci</strong></p>
 					<br>
 					<p>From the Abstract of <a href="http://hdl.handle.net/1959.3/352848" class="skill" target="_blank">“An Analysis of the Mobile App Review Landscape: Trends and Implications”</a>
 					</p>
