Swapped <br> tags in publication list in favour of using <li> class padding as more control is offered.

--- a/index.html
+++ b/index.html
@@ -134,42 +134,33 @@
 					<br>
 					<p>I currently write and publish in Healthcare Information Systems, Human Computer Interaction and Mobile App Review Analysis.</p>
 					<ul class="item-details">
-						<li>
+						<li class="pub">
 							Hoon, L., Tan, F.T.C., Vasa, R., Mouzakis, K., Fitzgerald, M. “ICT-Enabled Time-Critical Clinical Practices: Examining the Affordances of an Information Processing Solution,” 2015 (Accepted).
 						</li>
-						<br>
-						<li>
+						<li class="pub">
 							<a href="http://link.springer.com/chapter/10.1007/978-3-319-26285-7_19" class="skill" target="_blank">Hoon, L., Rodriguez-García, M.A., Vasa, R., Valencia-García, R., & Schneider, J.-G. “App Reviews: Breaking the User and Developer Language Barrier,” 2015.</a>
 						</li>
-						<br>
-						<li>
+						<li class="pub">
 							<a href="https://aut.researchgateway.ac.nz/handle/10292/8160" class="skill" target="_blank">Hoon, L., Mouzakis, K., Vasa, R., Tan, F.T.C., and Fitzgerald, M. “Examining the Role of IS Affordances in Enabling Time Critical Clinical Practices: An Information Processing Perspective,” 2014.</a>
 						</li>
-						<br>
-						<li>
+						<li class="pub">
 							<a href="http://dl.acm.org/citation.cfm?id=2541067" class="skill" target="_blank">Hoon, L., Vasa, R., Martino G.Y., Schneider, J.-G., Mouzakis, K. “Awesome! Conveying Satisfaction on the App Store,” 2013.</a>
 						</li>
-						<br>
-						<li>
+						<li class="pub">
 							<a href="http://hdl.handle.net/1959.3/364882" class="skill" target="_blank">Mouzakis, K., Hoon, L., and Vasa, R. “Socrates Mobile App Review Dataset,” 2013.</a>
 						</li>
-						<br>
-						<li>
+						<li class="pub">
 							<a href="http://hdl.handle.net/1959.3/352848" class="skill" target="_blank">Hoon, L., Vasa, R., Schneider, J.-G., and Grundy, J. “An Analysis of the Mobile App Review Landscape: Trends and Implications,” 2012.</a>
 						</li>
-						<br>
-						<li>
+						<li class="pub">
 							<a href="http://dl.acm.org/citation.cfm?id=2414578" class="skill" target="_blank">Hoon, L., Vasa, R., Schneider, J.-G., and Mouzakis, K. “A Preliminary Analysis of Vocabulary in Mobile App User Reviews,” 2012.</a>
 						</li>
-						<br>
-						<li>
+						<li class="pub">
 							<a href="http://dl.acm.org/citation.cfm?id=2414577" class="skill" target="_blank">Vasa, R., Hoon, L., Mouzakis, K., and Noguchi A. “A Preliminary Analysis of Mobile App User Reviews,” 2012.</a>
 						</li>
-						<br>
-						<li>
+						<li class="pub">
 							<a href="http://dl.acm.org/citation.cfm?id=2414606" class="skill" target="_blank">Pace, S., Hoon, L., and Woodward, C.J. "Simulated Influence of User Interaction with Mobile Devices Amongst Pedestrians,” 2012.</a>
 						</li>
-						<br>
 						<li>
 							<a href="http://dl.acm.org/citation.cfm?id=1862377" class="skill" target="_blank">Schneider, J.-G., Vasa, R., Hoon, L. "Do Metrics Help to Identify Refactoring?,” 2010.</a>
 						</li>
