Added a missing class notation to a list item in publications.

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 						<li class="pub">
 							<a href="http://dl.acm.org/citation.cfm?id=2414606" class="skill" target="_blank">Pace, S., Hoon, L., and Woodward, C.J. "Simulated Influence of User Interaction with Mobile Devices Amongst Pedestrians,” 2012.</a>
 						</li>
-						<li>
+						<li class="pub">
 							<a href="http://dl.acm.org/citation.cfm?id=1862377" class="skill" target="_blank">Schneider, J.-G., Vasa, R., Hoon, L. "Do Metrics Help to Identify Refactoring?,” 2010.</a>
 						</li>
 					</ul>
