Added link to my Google Scholar profile.

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 				<div class="col-lg-8 col-lg-offset-2 text-left">
 					<p class="quote"><strong>“Science is a wonderful thing if one does not have to earn one's living at it.”</p><p class="quoter"> ― Albert Einstein</strong></p>
 					<br>
-					<p>I currently write and publish in Healthcare Information Systems, Human Computer Interaction and Mobile App Review Analysis.</p>
+					<p>I currently write and publish in Healthcare Information Systems, Human Computer Interaction and Mobile App Review Analysis. My Google Scholar profile can be found <a href="https://scholar.google.com/citations?user=9UGKJ2wAAAAJ" class="skill" target="_blank">here.</a></p>
 					<ul class="item-details">
 						<li class="pub">
 							Hoon, L., Tan, F.T.C., Vasa, R., Mouzakis, K., Fitzgerald, M. “ICT-Enabled Time-Critical Clinical Practices: Examining the Affordances of an Information Processing Solution,” 2015 (Accepted).
