--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 						<a href="#resume">Resume</a>
 					</li>
 					<li class="page-scroll">
-						<a href="#contact">About</a>
+						<a href="#about">About</a>
 					</li>
 				</ul>
 
@@ -226,7 +226,7 @@
 	</section>
 
 	<!-- About Section -->
-	<section class="success" id="contact">
+	<section class="success" id="about">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
