--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<a href="#phd">PhD</a>
 					</li>
 					<li class="page-scroll">
-						<a href="#publications">Papers</a>
+						<a href="#research">Research</a>
 					</li>
 					<li class="page-scroll">
 						<a href="#resume">Resume</a>
@@ -61,7 +61,6 @@
 						<a href="#about">About</a>
 					</li>
 				</ul>
-
 			</div>
 			<!-- /.navbar-collapse -->
 		</div>
@@ -89,16 +88,23 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
-					<h2>Ph.D. Odyssey</h2>
+					<h2>Ph.D.</h2>
 					<hr class="star-primary">
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-lg-8 col-lg-offset-2 text-justify">
-					<p class="quote"><strong>“Learning never exhausts the mind.”</p><p class="quoter"> ― Leonardo da Vinci</strong></p>
+				<div class="col-lg-8 col-lg-offset-2 text-center">
+					<span class="quote">“Learning never exhausts the mind.”</span><span class="quoter"> ― Leonardo da Vinci</span>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-8 col-lg-offset-2 text-center">
 					<br>
-					<p>From the Abstract of <a href="http://hdl.handle.net/1959.3/352848" class="skill" target="_blank">“An Analysis of the Mobile App Review Landscape: Trends and Implications”</a>
-					</p>
+					<strong>From the Abstract of <a href="http://hdl.handle.net/1959.3/352848" class="skill" target="_blank">“An Analysis of the Mobile App Review Landscape: Trends and Implications”</a></strong>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-8 col-lg-offset-2 text-justify">
 					<br>
 					Apple Inc.'s App Store offers a distribution mechanism for apps and a public review system which allows users to express opinions regarding purchased apps. The ratings and reviews left by users have the potential to influence new users and, hence, have an impact on the commercial feasibility of an app. Current literature has extensively investigated reviews of books, movies and hotels. However, there is a limited understanding of reviews for mobile apps.
 					<br>
@@ -119,20 +125,30 @@
 		</div>
 	</section>
 
-	<!-- Publication List Section -->
-	<section id="publications">
-		<div class="container">
+	<!-- Research Section -->
+	<section id="research">
+		<div class="container-fluid">
 			<div class="row">
 				<div class="col-lg-12 text-center">
-					<h2>Publications</h2>
+					<h2>Research</h2>
 					<hr class="star-primary">
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-lg-8 col-lg-offset-2 text-left">
-					<p class="quote"><strong>“Science is a wonderful thing if one does not have to earn one's living at it.”</p><p class="quoter"> ― Albert Einstein</strong></p>
+				<div class="col-lg-8 col-lg-offset-2 text-center"><span class="quote">“Science is a wonderful thing if one does not have to earn one's living at it.”</span><span class="quoter"> ― Albert Einstein</span>
+				<br>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-8 col-lg-offset-2 text-justify">
 					<br>
-					<p>I currently write and publish in Healthcare Information Systems, Human Computer Interaction and Mobile App Review Analysis. My Google Scholar profile can be found <a href="https://scholar.google.com/citations?user=9UGKJ2wAAAAJ" class="skill" target="_blank">here.</a></p>
+					I currently write and publish in Healthcare Information Systems, Human Computer Interaction and Mobile App Review Analysis. My Google Scholar profile can be found <a href="https://scholar.google.com/citations?user=9UGKJ2wAAAAJ" class="skill" target="_blank">here.</a>
+					<br>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-8 col-lg-offset-2 text-justify">
+					<br>
 					<ul class="item-details">
 						<li class="pub">
 							Hoon, L., Tan, F.T.C., Vasa, R., Mouzakis, K., Fitzgerald, M. “ICT-Enabled Time-Critical Clinical Practices: Examining the Affordances of an Information Processing Solution,” 2015 (Accepted).
@@ -170,9 +186,9 @@
 		</div>
 	</section>
 
-	<!-- Teaching Section -->
+	<!-- Resume Section -->
 	<section id="resume">
-		<div class="container">
+		<div class="container-fluid">
 			<div class="row">
 				<div class="col-lg-12 text-center">
 					<h2>Resume Excerpt</h2>
@@ -180,46 +196,51 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-lg-8 col-lg-offset-2 text-left">
-					<p class="quote"><strong>“The illiterate of the 21st century will not be those who cannot read and write, but those who cannot learn, unlearn, and relearn.”</p><p class="quoter"> ― Alvin Toffler</strong></p>
+				<div class="col-lg-8 col-lg-offset-2 text-center">
+					<span class="quote">“The illiterate of the 21st century will not be those who cannot read and write, but those who cannot learn, unlearn, and relearn.”</span><span class="quoter"> ― Alvin Toffler</span>
 					<br>
-					<p style="text-align:center;"><a class="skill" href="./resume/lhoon-resume.pdf" download>Full resume</a></p>
-					<p>Experience:</p>
-					<ul class="list-inline item-details">
-						<li>
-							Aug '13 – Current: <strong>Research Fellow</strong>, Swinburne Software Innovation Lab.
-						</li>
-						<li>
-							Feb '10 – Current: <strong>Sessional Academic</strong>, Swinburne University of Technology.
-						</li>
-						<li>
-							Nov '12 – Aug '14: <strong>Student Volunteer Chair</strong>, Academic Conferences (ASWEC, OZCHI, VLHCC).
-						</li>
-						<li>
-							Feb '11 – Mar '11: <strong>Contract Analyst Developer</strong>, Lookout Mobile.
-						</li>
-						<li>
-							Aug '10 – Nov '10: <strong>Intern Application Developer</strong>, Long Weekend LLC.
-						</li>
-						<li>
-							Jun '06 – Jun '08: <strong>Corporal First Class</strong>, Armour Infantry Trooper, Singapore Armed Forces.
-						</li>
-					</ul>
-					<p>Education:</p>
-					<ul class="list-inline item-details">
-						<li>
-							(Expected in 2016) <strong>Ph.D. (CompSc)</strong>, Swinburne University of Technology, Australia.
-						</li>
-						<li>
-							<strong>MIT</strong>, Swinburne University of Technology, Australia.
-						</li>
-						<li>
-							<strong>BSc (IT)</strong>, Swinburne University of Technology, Australia.
-						</li>
-						<li>
-							<strong>Dip IT (E-Comm Tech)</strong>, Temasek Polytechnic, Singapore.
-						</li>
-					</ul>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-8 col-lg-offset-2 text-left">
+					<br>
+					<h4 style="text-align:center;"><a class="skill" href="./resume/lhoon-resume.pdf" download>Full resume</a></h4>
+					<h4>Experience:</h4>
+					<dl class="dl-horizontal">
+						<dt>Aug '13 – Current:</dt>
+						<dd>Research Fellow, Swinburne Software Innovation Lab.
+						</dd>
+						<dt>Feb '10 – Current:</dt>
+						<dd>Sessional Academic, Swinburne University of Technology.
+						</dd>
+						<dt>Nov '12 – Aug '14:</dt>
+						<dd>Student Volunteer Chair, Academic Conferences (ASWEC, OZCHI, VLHCC).
+						</dd>
+						<dt>Feb '11 – Mar '11:</dt>
+						<dd>Contract Analyst Developer, Lookout Mobile.
+						</dd>
+						<dt>Aug '10 – Nov '10:</dt>
+						<dd>Intern Application Developer, Long Weekend LLC.
+						</dd>
+						<dt>Jun '06 – Jun '08:</dt>
+						<dd>Corporal First Class, Armour Infantry Trooper, Singapore Armed Forces.
+						</dd>
+					</dl>
+					<h4>Education:</h4>
+					<dl class="dl-horizontal">
+						<dt>(Expected in 2016):</dt>
+						<dd>Doctor of Philosophy (Computer Science), Swinburne University of Technology, Australia.
+						</dd>
+						<dt>2010:</dt>
+						<dd>Master of Information Technology, Swinburne University of Technology, Australia.
+						</dd>
+						<dt>2009:</dt>
+						<dd>Bachelor of Science (Information Technology), Swinburne University of Technology, Australia.
+						</dd>
+						<dt>2006:</dt>
+						<dd>Diploma of Information Technology (E-Commerce Technology), Temasek Polytechnic, Singapore.
+						</dd>
+					</dl>
 				</div>
 			</div>
 		</div>
@@ -227,7 +248,7 @@
 
 	<!-- About Section -->
 	<section class="success" id="about">
-		<div class="container">
+		<div class="container-fluid">
 			<div class="row">
 				<div class="col-lg-12 text-center">
 					<h2>About Me</h2>
@@ -236,16 +257,19 @@
 			</div>
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2 text-center">
-					<p class="quote"><strong>“Get your facts first, then you can distort them as you please.”</p><p class="quoter"> ― Mark Twain</strong></p>
+					<span class="quote">“Get your facts first, then you can distort them as you please.”</span><span class="quoter"> ― Mark Twain</span>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-8 col-lg-offset-2 text-justify">
 					<br>
-					<p>Thank you for dropping by. I am a Research Fellow at the <a href="http://www.ssil.com.au" class="skill" target="_blank">Swinburne Software Innovation Lab</a> and a Sessional Academic with <a href="http://www.ssil.com.au" class="skill" target="_blank">Swinburne University of Technology</a>. Outside of that, I am either writing my Ph.D. thesis or playing instruments to the alongside my music teacher <a href="https://www.facebook.com/Sita-School-of-Singing-Music-and-Arts-172512701326" class="skill" target="_blank">Frank Sita</a> at local cafes.</p>
+					<p>Thanks for dropping by. I am a Research Fellow with the <a href="http://www.ssil.com.au" class="skill" target="_blank">Swinburne Software Innovation Lab</a> and a Sessional Academic with <a href="http://www.ssil.com.au" class="skill" target="_blank">Swinburne University of Technology</a>. Outside of that, I am either writing my Ph.D. thesis or playing instruments to the alongside my music teacher <a href="https://www.facebook.com/Sita-School-of-Singing-Music-and-Arts-172512701326" class="skill" target="_blank">Frank Sita</a> at local cafes.</p>
 				</div>
 				<div class="col-lg-8 col-lg-offset-2 text-center">
 					<a href="https://bitbucket.org/LHoon" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-bitbucket"></i></a>
 					<a href="https://github.com/lhoon" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
 					<a href="http://au.linkedin.com/in/leonardhoon/" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
 					<a href="mailto:lh@leonardhoon.com?Subject=Hello%20from%20your%20website" target="_top" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope"></i></a>
-					<!--a href="https://twitter.com/leonardhoon" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a-->
 				</div>
 			</div>
 		</div>
@@ -271,23 +295,23 @@
 		</a>
 	</div>
 
-	 <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+	<!-- jQuery -->
+	<script src="js/jquery.js"></script>
+	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+	<!-- Bootstrap Core JavaScript -->
+	<script src="js/bootstrap.min.js"></script>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+	<!-- Plugin JavaScript -->
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+	<script src="js/classie.js"></script>
+	<script src="js/cbpAnimatedHeader.js"></script>
 
-    <!-- Plugin JavaScript -->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script src="js/classie.js"></script>
-    <script src="js/cbpAnimatedHeader.js"></script>
+	<!-- Contact Form JavaScript -->
+	<script src="js/jqBootstrapValidation.js"></script>
+	<script src="js/contact_me.js"></script>
 
-    <!-- Contact Form JavaScript -->
-    <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
-
-    <!-- Custom Theme JavaScript -->
-    <script src="js/freelancer.js"></script>
+	<!-- Custom Theme JavaScript -->
+	<script src="js/freelancer.js"></script>
 
 
 </body>
