Changed list-inline to ordered list in tech report abstract.

--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@
 					In this work, we analyse a large sample of reviews for top rated apps in order to determine the nature of the reviews, and how these reviews evolve over time. We performed a statistical analysis of over 8.7 million app reviews to identify the general distribution of review size, the rate of growth for reviews, and analyse the change of both rating and review size over time using the Gini coefficient. We found that:
 					<br>
 					<br>
-					<ul class="list-inline">
-						<li>(i) most reviews are short and the majority of apps receive well under 50 reviews in their first year,</li>
-						<li>(ii) apps receive a higher number of short reviews in comparison to long reviews as they age,</li>
-						<li>(iii) around half of the apps decrease in user perceived quality over time, as reflected by the star ratings, and</li>
-						<li>(iv) the rate of review growth and profile of reviews changes significantly between various apps as well as categories.</li>
-					</ul>
+					<ol>
+						<li> most reviews are short and the majority of apps receive well under 50 reviews in their first year,</li>
+						<li> apps receive a higher number of short reviews in comparison to long reviews as they age,</li>
+						<li> around half of the apps decrease in user perceived quality over time, as reflected by the star ratings, and</li>
+						<li> the rate of review growth and profile of reviews changes significantly between various apps as well as categories.</li>
+					</ol>
 					<br>
 					Developers can use the data presented in this work to benchmark their app. Our approach offers insights for both newer and older apps as we analyse reviews over time. We recommend that developers regularly monitor early reviews and continuously refine their app in order to ensure they meet changing user expectations.
 				</div>
