Changed hyperlink text to 'Click here for....' Removed "From" from abstract description.

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2 text-center">
 					<br>
-					<strong>From the Abstract of <a href="http://hdl.handle.net/1959.3/352848" class="skill" target="_blank">“An Analysis of the Mobile App Review Landscape: Trends and Implications”</a></strong>
+					<strong>The Abstract of <a href="http://hdl.handle.net/1959.3/352848" class="skill" target="_blank">“An Analysis of the Mobile App Review Landscape: Trends and Implications”</a></strong>
 				</div>
 			</div>
 			<div class="row">
@@ -142,7 +142,7 @@
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2 text-justify">
 					<br>
-					I currently write and publish in Healthcare Information Systems, Human Computer Interaction and Mobile App Review Analysis. My Google Scholar profile can be found <a href="https://scholar.google.com/citations?user=9UGKJ2wAAAAJ" class="skill" target="_blank">here.</a>
+					I currently write and publish in Healthcare Information Systems, Human Computer Interaction and Mobile App Review Analysis. <a href="https://scholar.google.com/citations?user=9UGKJ2wAAAAJ" class="skill" target="_blank">Click here for my Google Scholar profile.</a>
 					<br>
 				</div>
 			</div>
@@ -204,7 +204,7 @@
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2 text-left">
 					<br>
-					<h4 style="text-align:center;"><a class="skill" href="./resume/lhoon-resume.pdf" download>Full resume</a></h4>
+					<h4 style="text-align:center;"><a class="skill" href="./resume/lhoon-resume.pdf" download>Click here for my full resume</a></h4>
 					<h4>Experience:</h4>
 					<dl class="dl-horizontal">
 						<dt>Aug '13 – Current:</dt>
