Tweaked the about section to fix a typ and ended up changing the quote and rewriting it. Changed the css to fix the colour discrepancy in that section and the p tag for text size.

--- a/index.html
+++ b/index.html
@@ -257,13 +257,13 @@
 			</div>
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2 text-center">
-					<span class="quote">“Get your facts first, then you can distort them as you please.”</span><span class="quoter"> ― Mark Twain</span>
+					<span class="quote">“Music is a moral law. It gives soul to the universe, wings to the mind, flight to the imagination, and charm and gaiety to life and to everything.”</span><span class="quoter"> ― Plato</span>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2 text-justify">
 					<br>
-					<p>Thanks for dropping by. I am a Research Fellow with the <a href="http://www.ssil.com.au" class="skill" target="_blank">Swinburne Software Innovation Lab</a> and a Sessional Academic with <a href="http://www.ssil.com.au" class="skill" target="_blank">Swinburne University of Technology</a>. Outside of that, I am either writing my Ph.D. thesis or playing instruments to the alongside my music teacher <a href="https://www.facebook.com/Sita-School-of-Singing-Music-and-Arts-172512701326" class="skill" target="_blank">Frank Sita</a> at local cafes.</p>
+					<p>Thanks for dropping by. When I was young(er), I was all about changing the world. The result? I now find myself in Research and Development. I enjoy involvement in a wide breadth of exciting projects as a Research Fellow with the <a href="http://www.ssil.com.au" class="about" target="_blank">SSI Lab.</a> Plus, as a Sessional Academic with <a href="http://www.swinburne.edu.au" class="about" target="_blank">Swinburne,</a> I get to challenge and inspire others to do the same! Music is my other passion. My free (and code debugging thinking) time is spent playing bass or guitar. Occasionally, I'm out gigging alongside my music teacher <a href="https://www.facebook.com/Sita-School-of-Singing-Music-and-Arts-172512701326" class="about" target="_blank">Frank Sita</a> at local cafes.</p>
 				</div>
 				<div class="col-lg-8 col-lg-offset-2 text-center">
 					<a href="https://bitbucket.org/LHoon" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-bitbucket"></i></a>
