--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2 text-justify">
 					<br>
-					<p>Thanks for dropping by. When I was young(er), I was all about changing the world. The result? I now find myself in Research and Development. I enjoy involvement in a wide breadth of exciting projects as a Research Fellow with the <a href="http://www.ssil.com.au" class="about" target="_blank">SSI Lab.</a> Plus, as a Sessional Academic with <a href="http://www.swinburne.edu.au" class="about" target="_blank">Swinburne,</a> I get to challenge and inspire others to do the same! Music is my other passion. My free (and code debugging thinking) time is spent playing bass or guitar. Occasionally, I'm out gigging alongside my music teacher <a href="https://www.facebook.com/Sita-School-of-Singing-Music-and-Arts-172512701326" class="about" target="_blank">Frank Sita</a> at local cafes.</p>
+					<p>Thanks for dropping by. When I was young(er), I was all about changing the world. Now? I find myself doing R&amp;D with the <a href="http://www.ssil.com.au" class="about" target="_blank">SSI Lab.</a> Plus, I get to challenge and inspire others while teaching at <a href="http://www.swinburne.edu.au" class="about" target="_blank">Swinburne!</a> Music is my other passion. My free (and code debugging thinking) time is spent either rewiring my pedal board or playing bass and guitar. Don't ask how many pedals or instruments I have. Have a great day!</p>
 				</div>
 				<div class="col-lg-8 col-lg-offset-2 text-center">
 					<a href="https://bitbucket.org/LHoon" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-bitbucket"></i></a>
