Removed "submitted" tag from ICT-Enabled practices journal paper as it is now published.

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 					<br>
 					<ul class="item-details">
 						<li class="pub">
-							Hoon, L., Tan, F.T.C., Vasa, R., Mouzakis, K., Fitzgerald, M. “ICT-Enabled Time-Critical Clinical Practices: Examining the Affordances of an Information Processing Solution,” 2015 (Accepted).
+							Hoon, L., Tan, F.T.C., Vasa, R., Mouzakis, K., Fitzgerald, M. “ICT-Enabled Time-Critical Clinical Practices: Examining the Affordances of an Information Processing Solution,” 2015.
 						</li>
 						<li class="pub">
 							<a href="http://link.springer.com/chapter/10.1007/978-3-319-26285-7_19" class="skill" target="_blank">Hoon, L., Rodriguez-García, M.A., Vasa, R., Valencia-García, R., & Schneider, J.-G. “App Reviews: Breaking the User and Developer Language Barrier,” 2015.</a>
