Updated publications and employment.

--- a/index.html
+++ b/index.html
@@ -151,6 +151,8 @@
 					<br>
 					<ul class="item-details">
 						<li class="pub">
+							<a href="http://link.springer.com/chapter/10.1007/978-3-319-26285-7_19" class="skill" target="_blank">L. Hoon, M. A. Rodriguez-Garcia, R. Vasa, R. Valencia-Garcia, and J.-G. Schneider, “App Reviews: Breaking the User and Developer Language Barrier,” 2015.</a>
+						</li><li class="pub">
 							<a href="http://journal.acs.org.au/index.php/ajis/article/viewFile/1146/701" class="skill" target="_blank">Hoon, L., Tan, F.T.C., Vasa, R., Mouzakis, K., Fitzgerald, M. “ICT-Enabled Time-Critical Clinical Practices: Examining the Affordances of an Information Processing Solution,” 2015.</a>
 						</li>
 						<li class="pub">
@@ -207,10 +209,10 @@
 					<h4 style="text-align:center;"><a class="skill" href="./resume/lhoon-resume.pdf" download>Click here for my full resume</a></h4>
 					<h4>Experience:</h4>
 					<dl class="dl-horizontal">
-						<dt>Aug '13 – Current:</dt>
+						<dt>Aug '13 – Dec '15:</dt>
 						<dd>Research Fellow, Swinburne Software Innovation Lab.
 						</dd>
-						<dt>Feb '10 – Current:</dt>
+						<dt>Feb '10 – Dec '15:</dt>
 						<dd>Sessional Academic, Swinburne University of Technology.
 						</dd>
 						<dt>Nov '12 – Aug '14:</dt>
