Added a Projects section to the website.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
 				</button>
 				<a class="navbar-brand" href="#page-top">Hi, I'm Leonard</a>
 			</div>
@@ -53,6 +54,9 @@
 					</li>
 					<li class="page-scroll">
 						<a href="#research">Research</a>
+					</li>
+					<li class="page-scroll">
+						<a href="#projects">Projects</a>
 					</li>
 					<li class="page-scroll">
 						<a href="#resume">Resume</a>
@@ -188,6 +192,60 @@
 		</div>
 	</section>
 
+	<!-- Projects Section -->
+	<section id="projects">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 text-center">
+					<h2>Projects</h2>
+					<hr class="star-primary">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-8 col-lg-offset-2 text-center">
+					<span class="quote">“Experience is the teacher of all things.”</span><span class="quoter"> ― Julius Caesar</span>
+				</div>
+			</div>
+			<div class="row">
+				<br>
+				<div class="col-lg-8 col-lg-offset-2 text-justify">
+					<strong><a href="https://vic.fightdementia.org.au/vic/3d-%E2%80%98dementia-friendly-home%E2%80%99-app-to-assist-carers-and-empower-people-living-with-dementia" class="skill" target="_blank">The Dementia Friendly Home</a>,
+					Deakin Software and Technology Innovation Laboratory</strong>
+					<br>
+					Developed by the Deakin Software and Technology Innovation Laboratory in collaboration with Alzheimer’s Australia, this app aims to educate carers about the ten Dementia Enabling Environment Principles. Application of these principles are visually illustrated in the 3D app to show carers what positive changes can be made in the home and the rationale behind such changes to allow people living with dementia to maintain their independence and continue living at home.
+					<br>
+					<br>
+					<strong>Contribution:</strong> Performed the heuristic evaluations and ran the usability tests for the app.
+					<br>
+					<br>
+					<strong><a href="http://www.trrproject.com/" class="skill" target="_blank">Trauma Reception & Resuscitation</a>, Swinburne NICTA Software Innovation Lab</strong>
+					<br>
+					A collaboration between the Swinburne Digital Innovation Lab and The Alfred’s Trauma Centre, lead to the development and launch of a Decision Support System that enabled end-users control over enriching the algorithmic knowledge base. Since deployment in the Trauma Ward, we observe 80% reduction in blood administered to patients, 21% reduction in errors of omission and 3 hours less time spent in trauma.
+					<br>
+					<br>
+					<strong>Contribution:</strong> produced <a href="https://aut.researchgateway.ac.nz/handle/10292/8160" class="skill" target="_blank">one conference</a> and <a href="http://journal.acs.org.au/index.php/ajis/article/viewFile/1146/701" class="skill" target="_blank">one journal</a> publication about the affordances enabled by the TR&R System.
+					<br>
+					<br>
+					<strong><a href="http://swinbrain.ict.swin.edu.au/wiki/SwinBrain" class="skill" target="_blank">Swinbrain Wiki Articles</a>, Swinburne University of Technology</strong>
+					<br>
+					The Faculty of Information & Communication Technologies hosts a Swinbrain wiki offering articles for student reference. Articles are contributed as an optional High Distinction level assignment for several units of study.
+					<br>
+					<br>
+					<strong>Contribution:</strong> Wrote the <a href="http://swinbrain.ict.swin.edu.au/wiki/Concurrent_Programming_-_Reader_Writer_Lock" class="skill" target="_blank">Concurrent Programming – Reader Writer Lock</a>, <a href="http://swinbrain.ict.swin.edu.au/wiki/Database_Concurrency" class="skill" target="_blank">DB Concurrency</a> and <a href="http://swinbrain.ict.swin.edu.au/wiki/Isolation" class="skill" target="_blank">DB Isolation Levels</a> articles.
+					<br>
+					<br>
+					<strong><a href="https://github.com/lhoon/seacowdb" class="skill" target="_blank">Seacow DBMS</a>, Swinburne University of Technology</strong>
+					<br>
+					Developed under the BSD license for the subject Advanced .NET with two other students in C#, .NET Framework 3.5. Seacow is a DBMS developed to establish Transaction and Isolation level configuration and support with Telnet connectivity and showcase practical application of concurrency paradigms internally and over a networked architecture.
+					<br>
+					<br>
+					<strong>Contribution:</strong> Primarily focused on writing the concurrency utilities used and planning of the architecture. Equal contribution was made in the development, deployment and testing of the system.
+					<br>
+				</div>
+			</div>
+		</div>
+	</section>
+
 	<!-- Resume Section -->
 	<section id="resume">
 		<div class="container-fluid">
@@ -210,9 +268,9 @@
 					<h4>Experience:</h4>
 					<dl class="dl-horizontal">
 						<dt>Aug '13 – Dec '15:</dt>
-						<dd>Research Fellow, Swinburne Software Innovation Lab.
+						<dd>Research Fellow, NICTA Swinburne Digital Innovation Lab.
 						</dd>
-						<dt>Feb '10 – Dec '15:</dt>
+						<dt>Feb '10 – Aug '13:</dt>
 						<dd>Sessional Academic, Swinburne University of Technology.
 						</dd>
 						<dt>Nov '12 – Aug '14:</dt>
